# CPEN333_Lab5

./: CMakeLists.txt  CPEN333_Lab5.sln
CPEN333_Lab5/: CPEN333_Lab5.vcxproj
include/: JsonConverter.h  JsonMusicLibraryApi.h  Message.h  MusicLibrary.h  MusicLibraryApi.h  Song.h  json.hpp
music_library_client/: music_library_client.cpp  music_library_client.vcxproj  music_library_client.vcxproj.filters
music_library_client/data/: billboard_alternative.json  billboard_electronic.json  billboard_hot_100.json  billboard_jazz.json
music_library_client/data/lyrics/: Ella Fitzgerald - Dream A Little Dream Of Me.txt  Eurythmics - Sweet Dreams.txt
music_library_server/: music_library_server.cpp  music_library_server.vcxproj  music_library_server.vcxproj.filters
music_library_server/data/: billboard_adult_contemporary.json  billboard_country.json  billboard_greatest_hot_100.json
music_library_server/data/lyrics/: Katy Perry - Teenage Dream.txt
music_library_test/: TestException.h  music_library_test.cpp  music_library_test.vcxproj  music_library_test.vcxproj.filters
music_library_test/data/: billboard_adult_pop.json  billboard_downloader.py  billboard_r&b.json  billboard_rap.json  billboard_rock.json
